add external css and finish basic component's layout - Add 2 more containers to the html file to better items disposition in the page.

--- a/index.html
+++ b/index.html
@@ -25,114 +25,117 @@
         color: hsl(228, 45%, 44%);
       }
     </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main class="container">
-      <section class="text-box">
-        <h1 class="text-title">10,000+ of our users love our products.</h1>
-        <p class="text-description">
-          We only provide great products combined with excellent customer
-          service. See what our satisfied customers are saying about our
-          services.
-        </p>
-      </section>
-
-      <section class="star-rating-box">
-        <div class="reviews-container">
-          <!-- Este va a ser un flex-container -->
-          <div class="stars-box">
-            <img src="images/icon-star.svg" alt="Star icon" class="star" />
-            <img src="images/icon-star.svg" alt="Star icon" class="star" />
-            <img src="images/icon-star.svg" alt="Star icon" class="star" />
-            <img src="images/icon-star.svg" alt="Star icon" class="star" />
-            <img src="images/icon-star.svg" alt="Star icon" class="star" />
-          </div>
-          <p class="review-text">Rated 5 Stars in Reviews</p>
-        </div>
-
-        <div class="reviews-container">
-          <!-- Este va a ser un flex-container -->
-          <div class="stars-box">
-            <img src="images/icon-star.svg" alt="Star icon" class="star" />
-            <img src="images/icon-star.svg" alt="Star icon" class="star" />
-            <img src="images/icon-star.svg" alt="Star icon" class="star" />
-            <img src="images/icon-star.svg" alt="Star icon" class="star" />
-            <img src="images/icon-star.svg" alt="Star icon" class="star" />
-          </div>
-          <p class="review-text">Rated 5 Stars in Report Guru</p>
-        </div>
-
-        <div class="reviews-container">
-          <!-- Este va a ser un flex-container -->
-          <div class="stars-box">
-            <img src="images/icon-star.svg" alt="Star icon" class="star" />
-            <img src="images/icon-star.svg" alt="Star icon" class="star" />
-            <img src="images/icon-star.svg" alt="Star icon" class="star" />
-            <img src="images/icon-star.svg" alt="Star icon" class="star" />
-            <img src="images/icon-star.svg" alt="Star icon" class="star" />
-          </div>
-          <p class="review-text">Rated 5 Stars in BestTech</p>
-        </div>
-      </section>
-
-      <section class="testimonial-box">
-        <blockquote class="testimonial colton">
-          <div class="testimonial-header">
-            <img src="images/image-colton.jpg" alt="Photo of Colton Smith" />
-            <div class="text-container">
-              <h2 class="testimonial-author">Colton Smith</h2>
-              <p class="author-description">Verified Buyer</p>
-            </div>
-          </div>
-          <p class="testimonial-text">
-            "We needed the same printed design as the one we had ordered a week
-            prior. Not only did they find the original order, but we also
-            received it in time. Excellent!"
+    <main class="main-container">
+      <div class="grid-container">
+        <section class="text-box">
+          <h1 class="text-title">10,000+ of our users love our products.</h1>
+          <p class="text-description">
+            We only provide great products combined with excellent customer
+            service. See what our satisfied customers are saying about our
+            services.
           </p>
-        </blockquote>
+        </section>
 
-        <blockquote class="testimonial irene">
-          <div class="testimonial-header">
-            <img src="images/image-irene.jpg" alt="Photo of Irene Roberts" />
-            <div class="text-container">
-              <h2 class="testimonial-author">Irene Roberts</h2>
-              <p class="author-description">Verified Buyer</p>
+        <section class="star-rating-box">
+          <div class="reviews-container">
+            <!-- Este va a ser un flex-container -->
+            <div class="stars-box">
+              <img src="images/icon-star.svg" alt="Star icon" class="star" />
+              <img src="images/icon-star.svg" alt="Star icon" class="star" />
+              <img src="images/icon-star.svg" alt="Star icon" class="star" />
+              <img src="images/icon-star.svg" alt="Star icon" class="star" />
+              <img src="images/icon-star.svg" alt="Star icon" class="star" />
             </div>
+            <p class="review-text">Rated 5 Stars in Reviews</p>
           </div>
-          <p class="testimonial-text">
-            "Customer service is always excellent and very quick turn around.
-            Completely delighted with the simplicity of the purchase and the
-            speed of delivery."
-          </p>
-        </blockquote>
 
-        <blockquote class="testimonial anne">
-          <div class="testimonial-header">
-            <img src="images/image-anne.jpg" alt="Photo of Anne Wallace" />
-            <div class="text-container">
-              <h2 class="testimonial-author">Anne Wallace</h2>
-              <p class="author-description">Verified Buyer</p>
+          <div class="reviews-container">
+            <!-- Este va a ser un flex-container -->
+            <div class="stars-box">
+              <img src="images/icon-star.svg" alt="Star icon" class="star" />
+              <img src="images/icon-star.svg" alt="Star icon" class="star" />
+              <img src="images/icon-star.svg" alt="Star icon" class="star" />
+              <img src="images/icon-star.svg" alt="Star icon" class="star" />
+              <img src="images/icon-star.svg" alt="Star icon" class="star" />
             </div>
+            <p class="review-text">Rated 5 Stars in Report Guru</p>
           </div>
-          <p class="testimonial-text">
-            "Put an order with this company and can only praise them for the
-            very high standard. Will definitely use them again and recommend
-            them to everyone!"
-          </p>
-        </blockquote>
-      </section>
+
+          <div class="reviews-container">
+            <!-- Este va a ser un flex-container -->
+            <div class="stars-box">
+              <img src="images/icon-star.svg" alt="Star icon" class="star" />
+              <img src="images/icon-star.svg" alt="Star icon" class="star" />
+              <img src="images/icon-star.svg" alt="Star icon" class="star" />
+              <img src="images/icon-star.svg" alt="Star icon" class="star" />
+              <img src="images/icon-star.svg" alt="Star icon" class="star" />
+            </div>
+            <p class="review-text">Rated 5 Stars in BestTech</p>
+          </div>
+        </section>
+
+        <section class="testimonial-box">
+          <blockquote class="testimonial colton">
+            <div class="testimonial-header">
+              <img src="images/image-colton.jpg" alt="Photo of Colton Smith" />
+              <div class="text-container">
+                <h2 class="testimonial-author">Colton Smith</h2>
+                <p class="author-description">Verified Buyer</p>
+              </div>
+            </div>
+            <p class="testimonial-text">
+              "We needed the same printed design as the one we had ordered a
+              week prior. Not only did they find the original order, but we also
+              received it in time. Excellent!"
+            </p>
+          </blockquote>
+
+          <blockquote class="testimonial irene">
+            <div class="testimonial-header">
+              <img src="images/image-irene.jpg" alt="Photo of Irene Roberts" />
+              <div class="text-container">
+                <h2 class="testimonial-author">Irene Roberts</h2>
+                <p class="author-description">Verified Buyer</p>
+              </div>
+            </div>
+            <p class="testimonial-text">
+              "Customer service is always excellent and very quick turn around.
+              Completely delighted with the simplicity of the purchase and the
+              speed of delivery."
+            </p>
+          </blockquote>
+
+          <blockquote class="testimonial anne">
+            <div class="testimonial-header">
+              <img src="images/image-anne.jpg" alt="Photo of Anne Wallace" />
+              <div class="text-container">
+                <h2 class="testimonial-author">Anne Wallace</h2>
+                <p class="author-description">Verified Buyer</p>
+              </div>
+            </div>
+            <p class="testimonial-text">
+              "Put an order with this company and can only praise them for the
+              very high standard. Will definitely use them again and recommend
+              them to everyone!"
+            </p>
+          </blockquote>
+        </section>
+      </div>
+
+      <footer class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a
+          href="https://www.frontendmentor.io/profile/juanmfretes"
+          target="_blank"
+          >juanmfretes</a
+        >.
+      </footer>
     </main>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by
-      <a
-        href="https://www.frontendmentor.io/profile/juanmfretes"
-        target="_blank"
-        >juanmfretes</a
-      >.
-    </div>
   </body>
 </html>
