improve semantic from testimonial section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </section>
 
         <section class="testimonial-box">
-          <blockquote class="testimonial colton">
+          <figure class="testimonial colton">
             <div class="testimonial-header">
               <img src="images/image-colton.jpg" alt="Photo of Colton Smith" />
               <div class="text-container">
@@ -86,14 +86,14 @@
                 <p class="author-description">Verified Buyer</p>
               </div>
             </div>
-            <p class="testimonial-text">
+            <blockquote class="testimonial-text">
               "We needed the same printed design as the one we had ordered a
               week prior. Not only did they find the original order, but we also
               received it in time. Excellent!"
-            </p>
-          </blockquote>
+            </blockquote>
+          </figure>
 
-          <blockquote class="testimonial irene">
+          <figure class="testimonial irene">
             <div class="testimonial-header">
               <img src="images/image-irene.jpg" alt="Photo of Irene Roberts" />
               <div class="text-container">
@@ -101,14 +101,14 @@
                 <p class="author-description">Verified Buyer</p>
               </div>
             </div>
-            <p class="testimonial-text">
+            <blockquote class="testimonial-text">
               "Customer service is always excellent and very quick turn around.
               Completely delighted with the simplicity of the purchase and the
               speed of delivery."
-            </p>
-          </blockquote>
+            </blockquote>
+          </figure>
 
-          <blockquote class="testimonial anne">
+          <figure class="testimonial anne">
             <div class="testimonial-header">
               <img src="images/image-anne.jpg" alt="Photo of Anne Wallace" />
               <div class="text-container">
@@ -116,12 +116,12 @@
                 <p class="author-description">Verified Buyer</p>
               </div>
             </div>
-            <p class="testimonial-text">
+            <blockquote class="testimonial-text">
               "Put an order with this company and can only praise them for the
               very high standard. Will definitely use them again and recommend
               them to everyone!"
-            </p>
-          </blockquote>
+            </blockquote>
+          </figure>
         </section>
       </div>
 
