remove testimonial-section from the grid and delete external flex-container

--- a/index.html
+++ b/index.html
@@ -76,54 +76,66 @@
             <p class="review-text">Rated 5 Stars in BestTech</p>
           </div>
         </section>
-
-        <section class="testimonial-box">
-          <figure class="testimonial colton">
-            <div class="testimonial-header">
-              <img src="images/image-colton.jpg" alt="Photo of Colton Smith" />
-              <div class="text-container">
-                <h2 class="testimonial-author">Colton Smith</h2>
-                <p class="author-description">Verified Buyer</p>
-              </div>
-            </div>
-            <blockquote class="testimonial-text">
-              "We needed the same printed design as the one we had ordered a
-              week prior. Not only did they find the original order, but we also
-              received it in time. Excellent!"
-            </blockquote>
-          </figure>
-
-          <figure class="testimonial irene">
-            <div class="testimonial-header">
-              <img src="images/image-irene.jpg" alt="Photo of Irene Roberts" />
-              <div class="text-container">
-                <h2 class="testimonial-author">Irene Roberts</h2>
-                <p class="author-description">Verified Buyer</p>
-              </div>
-            </div>
-            <blockquote class="testimonial-text">
-              "Customer service is always excellent and very quick turn around.
-              Completely delighted with the simplicity of the purchase and the
-              speed of delivery."
-            </blockquote>
-          </figure>
-
-          <figure class="testimonial anne">
-            <div class="testimonial-header">
-              <img src="images/image-anne.jpg" alt="Photo of Anne Wallace" />
-              <div class="text-container">
-                <h2 class="testimonial-author">Anne Wallace</h2>
-                <p class="author-description">Verified Buyer</p>
-              </div>
-            </div>
-            <blockquote class="testimonial-text">
-              "Put an order with this company and can only praise them for the
-              very high standard. Will definitely use them again and recommend
-              them to everyone!"
-            </blockquote>
-          </figure>
-        </section>
       </div>
+
+      <section class="testimonial-box">
+        <figure class="testimonial colton">
+          <div class="testimonial-header">
+            <img
+              class="author-photo"
+              src="images/image-colton.jpg"
+              alt="Photo of Colton Smith"
+            />
+            <div class="text-container">
+              <h2 class="testimonial-author">Colton Smith</h2>
+              <p class="author-description">Verified Buyer</p>
+            </div>
+          </div>
+          <blockquote class="testimonial-text">
+            " We needed the same printed design as the one we had ordered a week
+            prior. Not only did they find the original order, but we also
+            received it in time. Excellent! "
+          </blockquote>
+        </figure>
+
+        <figure class="testimonial irene">
+          <div class="testimonial-header">
+            <img
+              class="author-photo"
+              src="images/image-irene.jpg"
+              alt="Photo of Irene Roberts"
+            />
+            <div class="text-container">
+              <h2 class="testimonial-author">Irene Roberts</h2>
+              <p class="author-description">Verified Buyer</p>
+            </div>
+          </div>
+          <blockquote class="testimonial-text">
+            " Customer service is always excellent and very quick turn around.
+            Completely delighted with the simplicity of the purchase and the
+            speed of delivery. "
+          </blockquote>
+        </figure>
+
+        <figure class="testimonial anne">
+          <div class="testimonial-header">
+            <img
+              class="author-photo"
+              src="images/image-anne.jpg"
+              alt="Photo of Anne Wallace"
+            />
+            <div class="text-container">
+              <h2 class="testimonial-author">Anne Wallace</h2>
+              <p class="author-description">Verified Buyer</p>
+            </div>
+          </div>
+          <blockquote class="testimonial-text">
+            " Put an order with this company and can only praise them for the
+            very high standard. Will definitely use them again and recommend
+            them to everyone! "
+          </blockquote>
+        </figure>
+      </section>
 
       <footer class="attribution">
         Challenge by
