--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       }
     </style>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="queries.css" />
   </head>
   <body>
     <main class="main-container">
